--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "node": ">=20.15.1"
   },
   "dependencies": {
+    "@eslint-react/eslint-plugin": "^1.5.25",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^8.57.0",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
@@ -61,7 +62,6 @@
     "eslint-plugin-import-x": "^3.0.1",
     "eslint-plugin-perfectionist": "^2.11.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-solid": "^0.14.1",
     "globals": "^15.8.0",
