--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "eslint-plugin-import-x": "^4.0.0",
     "eslint-plugin-perfectionist": "^3.2.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-eb3ad065-20240822",
     "eslint-plugin-solid": "^0.14.2",
     "globals": "^15.9.0",
     "knitwork": "^1.1.0",
