--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -30,3 +30,4 @@ jobs:
           git config user.email bot@risto.io
           pnpm version --new-version ${{ github.event.inputs.version }}
           git push --follow-tags
+          echo "Version bumped to v${{ github.event.inputs.version }}"
