--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "node": ">=20.17.0"
   },
   "dependencies": {
-    "@eslint-react/eslint-plugin": "^1.14.1",
+    "@eslint-react/eslint-plugin": "^1.14.2",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.11.0",
     "@typescript-eslint/eslint-plugin": "^8.6.0",
@@ -62,7 +62,7 @@
     "eslint-plugin-import-x": "^4.2.1",
     "eslint-plugin-perfectionist": "^3.6.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc-fb9a90fa48-20240614",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-e740d4b1-20240919",
     "eslint-plugin-solid": "^0.14.3",
     "globals": "^15.9.0",
     "knitwork": "^1.1.0",
