Update eslint-plugin-react-hooks rc version

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "eslint-plugin-import-x": "^4.3.1",
     "eslint-plugin-perfectionist": "^3.8.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc-fb9a90fa48-20240614",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-0751fac7-20241002",
     "eslint-plugin-solid": "^0.14.3",
     "globals": "^15.10.0",
     "knitwork": "^1.1.0",
