--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "lint:md:fix": "prettier '**/*.md' --write",
     "pj": "node .projenrc.js",
     "postinstall": "node scripts/postinstall.mjs",
-    "typecheck": "tsc --noEmit"
+    "tc": "tsc --noEmit"
   },
   "engines": {
     "node": ">=22.14.0"
