--- a/.github/workflows/node-upgrade.yml
+++ b/.github/workflows/node-upgrade.yml
@@ -4,12 +4,17 @@ on:
   push:
     branches: [renovate/node**]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   check:
     name: 'propagate node upgrade'
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    timeout-minutes: 5
     steps:
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
@@ -35,5 +40,7 @@ jobs:
           git config user.name mergewhether
           git config user.email bot@risto.io
           git commit -am "Propagate node upgrade" || exit 0
-          git push
-          exit 1
+      - name: Push Changes
+        run: |
+          # push back to the branch that triggered this workflow
+          git push || echo "No changes to push"
