--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -7,9 +7,16 @@ on:
         description: 'Next Version'
         required: true
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.inputs.version || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   Version:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    timeout-minutes: 5
 
     steps:
       - name: Checkout
@@ -24,6 +31,12 @@ jobs:
         uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6
         with:
           node-version: '24.12.0'
+      - name: Validate version
+        run: |
+          if ! echo "${{ github.event.inputs.version }}" | grep -Eq '^([0-9]+)\.([0-9]+)\.([0-9]+)(-[0-9A-Za-z.-]+)?$'; then
+            echo "Invalid version format: ${{ github.event.inputs.version }}"
+            exit 1
+          fi
       - name: Version
         run: |
           git config user.name mergewhether
